<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/colorSelected1"
    android:gravity="center"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_class"

        android:gravity="center_horizontal"
        android:background="#000000"
        android:textSize="25sp"
        />

    <EditText
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:hint="Subject"
        android:background="#000000"
        android:textAlignment="center"
        android:textSize="25sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/pick_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_weight="1"
            android:background="@drawable/bg_calendar"
            android:text="Start Date"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/date"
            android:layout_marginTop="45dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            android:textSize="25sp"
            android:text="@string/date"
            android:textAlignment="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/pick_date2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_weight="1"
            android:background="@drawable/bg_calendar"
            android:text="End Date"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/date2"
            android:layout_marginTop="45dp"
            android:textSize="25sp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="45dp"

        >

        <CheckBox
            android:id="@+id/monday"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_height="wrap_content"
            android:text="@string/monday" />

        <CheckBox
            android:id="@+id/tuesday"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:textSize="25sp"
            android:checked="true" />

        <CheckBox
            android:id="@+id/wednesday"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/wednesday" />
        <CheckBox
            android:id="@+id/thursday"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="wrap_content"

            android:textSize="25sp"
            android:text="@string/thursday" />
        <CheckBox
            android:id="@+id/friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="@string/friday" />
        <CheckBox
            android:id="@+id/saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="@string/saturday" />



    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:background="@drawable/bg_calendar"
        android:text="@string/save"
        android:padding="10dp"
        android:textSize="25sp"
        android:onClick="addClass"/>



</LinearLayout>