<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/colorSelected1"
    android:gravity="center"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assignment"
        android:gravity="center_horizontal"
        android:background="@color/colorSelected1"
        android:textSize="25sp"
        />

    <EditText
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@color/colorSelected1"
        android:hint="Assignment Name"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:textSize="25sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/pick_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_weight="1"
            android:background="@drawable/bg_calendar"
            android:text="Due Date"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/date"
            android:layout_marginTop="45dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/date"
            android:textAlignment="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="addAssignment"
            android:background="@drawable/bg_calendar"
            android:text="@string/save"
            android:textSize="25sp"
            android:padding="10dp"/>
    </LinearLayout>
</LinearLayout>