<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/colorSelected1"
    android:gravity="center"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_task"

        android:gravity="center_horizontal"
        android:background="@color/colorSelected1"
        android:textSize="25sp"
        />

    <EditText
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:textColorHint="@color/white"
        android:background="@color/colorSelected1"
        android:hint="Task"
        android:textAlignment="center"
        android:textSize="25sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/pick_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_weight="1"
            android:background="@drawable/bg_calendar"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:text="Start Date"
            android:textSize="25sp" />

    <TextView
        android:id="@+id/date"
        android:layout_marginTop="45dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"

        android:textSize="25sp"
        android:hint="@string/date"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/pick_date2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_weight="1"
            android:background="@drawable/bg_calendar"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:text="End Date"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/date2"
            android:layout_marginTop="45dp"
            android:textSize="25sp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:textColorHint="@color/white"
            />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:onClick="addTask"
        android:background="@drawable/bg_calendar"
        android:text="@string/save"
        android:padding="10dp"
        android:textSize="25sp" />


</LinearLayout>